<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/new_ad"
        android:title="@string/b_nav_new_ad"
        android:icon="@drawable/baseline_new_ad2"
        android:orderInCategory="400"
        />
    <item
        android:id="@+id/my_ads"
        android:title="@string/b_nav_my_ads"
        android:icon="@drawable/baseline_my_ads2"
        android:orderInCategory="300"
        />
    <item
        android:id="@+id/favourite"
        android:title="@string/b_nav_favs"
        android:icon="@drawable/baseline_favorite_pressed"
        android:orderInCategory="200"
        />
    <item
        android:id="@+id/main"
        android:title="@string/b_nav_main"
        android:icon="@drawable/baseline_main"
        android:orderInCategory="100"
        />

</menu>