<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activities.FilterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_main"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAdress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/country"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSelectCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/tv_select_item_bg"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/black"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/city"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSelectCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/tv_select_item_bg"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/black"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/index"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edIndex"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:autofillHints=""
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/index"
                        android:inputType="number"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColorHint="@color/grey"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/black"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/with_send_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cbWithSend"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:buttonTint="@color/purple"
                        android:text="@string/with_send"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/black"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/btn_shape"
                android:padding="8dp"
                android:text="@string/btn_filter"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btFilterClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_shape"
                android:padding="8dp"
                android:text="@string/btn_filter_clear"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>